<resources>
    <string name="app_name">InvoiceTotal</string>
    <string name="subtotal_label">Subtotal</string>
    <string name="discount_percent_label">Discount Percent</string>
    <string name="discount_amount_label">Discount Amount</string>
    <string name="total_label">Total</string>
    <string name="discount_percent">00%</string>
    <string name="discount_amount">$0.00</string>
    <string name="total">$0.00</string>
</resources>
