<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rabor.invoicetotal.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotal_label"
            android:id="@+id/mSubtotalLabel"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/mSubtotalET"
            android:layout_alignBottom="@+id/mSubtotalLabel"
            android:layout_alignParentEnd="true"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mDiscountPercentLabel"
            android:text="@string/discount_percent_label"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            android:layout_below="@+id/mSubtotalLabel"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_percent"
            android:id="@+id/mDiscountPercentTV"
            android:layout_alignBottom="@+id/mDiscountPercentLabel"
            android:layout_alignParentEnd="true"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_amount_label"
            android:id="@+id/mDiscountAmountLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/mDiscountPercentLabel"
            android:layout_alignParentStart="true"
            android:layout_marginTop="42dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_amount"
            android:id="@+id/mDiscountAmountTV"
            android:layout_alignBottom="@+id/mDiscountAmountLabel"
            android:layout_alignParentEnd="true"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_label"
            android:id="@+id/mTotalLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/mDiscountAmountLabel"
            android:layout_alignParentStart="true"
            android:layout_marginTop="41dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:id="@+id/mTotalTV"
            android:layout_alignBottom="@+id/mTotalLabel"
            android:layout_alignParentEnd="true"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_below="@+id/mTotalTV">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="true"
                android:background="@drawable/framebutton"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:id="@+id/resetImageView"
                android:onClick="resetClick"
                android:background="@drawable/resetlogo"
                android:layout_gravity="center" />



        </FrameLayout>
    </RelativeLayout>
</ScrollView>
